# crag

./: README.md
crag_project/: pyproject.toml
crag_project/crag/: __main__.py  acts.py  cagen.py  crag.py  pict.py  roadgeometry.py  tsgenerator.py  utils.py
crag_project/docs/: index.html  objects.inv  py-modindex.html  search.html
crag_project/docs/_sources/: index.rst.txt
crag_project/docs/_sources/source/: crag.rst.txt  modules.rst.txt
crag_project/examples/roadsearch_examples/: README.txt
crag_project/examples/roadsearch_examples/roadsearch_1p1/: crag1p1.py  pict-mac  roadevolutionstrategy.py
crag_project/examples/roadsearch_examples/roadsearch_default/: cragdefault.py
crag_project/examples/roadsearch_examples/roadsearch_repetition/: cragrepetition.py
crag_project/examples/standalone/: NOTICE  README.md  carlapidonbicycle.py  controller.py  example_as_a_standalone.py  vehicle.py
docs/: genindex.html  searchindex.js
docs/source/: crag.html  modules.html
experimental_results_SCICO2024/: CRAG_SCICO_2024_results_raw_data.xlsx
