[tool.poetry]
name = "crag"
version = "1.0"
description = "Combinatorial-Testing-Based Road Generator"
authors = ["Paolo Arcaini <arcaini@nii.ac.jp>", "Ahmet Cetinkaya <ahmet@shibaura-it.ac.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
shapely = "^1.7"
numpy = "^1.21.6"
matplotlib = "^3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
crag = 'crag.__main__:main'
